k8s/kafka-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: ghcr.io/kafbat/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: ecommerce
spec:
  selector:
    app: kafka-ui
  type: LoadBalancer
  ports:
    - port: 8080
      nodePort: 30089
