k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: rayhan1994/notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: ecommerce
spec:
  selector:
    app: notification
  type: NodePort
  ports:
    - port: 8082
      nodePort: 30082
