k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: rayhan1994/order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: ecommerce
spec:
  selector:
    app: order
  type: NodePort
  ports:
    - port: 8083
      nodePort: 30083
